--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@types/node": "20.6.4",
-    "@types/react": "18.2.22",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
@@ -20,10 +25,13 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
+    "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.22.2"
   }
 }
